[package]
name = "bellosaize"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
dirs = "6.0.0"
gio = "0.22.2"
glib = "0.22.3"
gtk = { package = "gtk4", version = "0.11.2", features = ["gnome_46"] }
libc = "0.2.177"
pango = "0.22.1"
serde = { version = "1.0.228", features = ["derive"] }
shlex = "1.3.0"
toml = "0.9.8"
vte = { package = "vte4", version = "0.10.0", features = ["v0_76"] }
